style: fix png export cutting off..

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1284,6 +1284,8 @@ html[data-theme="dark"] .home-tip {
   gap: 1rem;
   justify-items: center;
   text-align: center;
+  padding: 1.5rem;
+  border: none;
 }
 
 .sort-resultsTable {
@@ -1409,8 +1411,8 @@ html[data-theme="dark"] .home-tip {
     font-size: 1rem;
   }
 
-  .sort-resultsContainer {
-    padding: 0.5rem;
+  .sort-resultsExportContainer {
+    padding: 2rem;
     border: none;
   }
 
